k8sYAML/ingress-svc-depoy12.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-deploy1
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-deploy1
  template:
    metadata:
      labels:
        app: nginx-deploy1
    spec:
      containers:
      - name: nginx-deploy1
        image: jinling/nginx:alpine0

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deploy-svc1
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx-deploy1
  ports:
  - port: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-web1
spec:
  rules:
  - host: web1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-deploy-svc1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-deploy2
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-deploy2
  template:
    metadata:
      labels:
        app: nginx-deploy2
    spec:
      containers:
      - name: nginx-deploy2
        image: jinling/nginx:alpine2

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deploy-svc2
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx-deploy2
  ports:
  - port: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-web2
spec:
  rules:
  - host: web2.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-deploy-svc2
          servicePort: 80
